--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "next-template",
+  "name": "next-shadcn-markdoc",
   "version": "0.0.2",
   "private": true,
+  "author": {
+    "name": "Marcus Reinhardt",
+    "url": "https://github.com/noxify"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,33 +18,41 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.4.0",
-    "clsx": "^1.2.1",
-    "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.4.4",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sharp": "^0.31.3",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "@markdoc/markdoc": "0.3.0",
+    "@radix-ui/react-scroll-area": "1.0.4",
+    "@radix-ui/react-slot": "1.0.2",
+    "@sindresorhus/slugify": "2.2.1",
+    "class-variance-authority": "0.6.0",
+    "clsx": "1.2.1",
+    "globby": "13.2.0",
+    "gray-matter": "4.0.3",
+    "lucide-react": "0.252.0",
+    "next": "13.4.7",
+    "next-themes": "0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sharp": "0.32.1",
+    "tailwind-merge": "1.13.2",
+    "tailwindcss-animate": "1.0.6",
+    "zod": "^3.21.4",
+    "zod-matter": "0.1.1"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
-    "@types/node": "^17.0.45",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/parser": "^5.59.7",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.41.0",
-    "eslint-config-next": "13.0.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.12.0",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5"
+    "@ianvs/prettier-plugin-sort-imports": "4.0.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "18.16.18",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/parser": "5.60.0",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-tailwindcss": "3.12.1",
+    "postcss": "8.4.24",
+    "prettier": "2.8.8",
+    "tailwindcss": "3.3.2",
+    "typescript": "4.9.5"
   }
 }
