--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@code-hike/lighter": "^0.7.0",
     "@markdoc/markdoc": "0.3.0",
     "@radix-ui/react-scroll-area": "1.0.4",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tabs": "1.0.4",
     "@sindresorhus/slugify": "2.2.1",
     "class-variance-authority": "0.6.0",
     "clsx": "1.2.1",
@@ -34,14 +36,14 @@
     "sharp": "0.32.1",
     "tailwind-merge": "1.13.2",
     "tailwindcss-animate": "1.0.6",
-    "zod": "^3.21.4",
+    "zod": "3.21.4",
     "zod-matter": "0.1.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.0.2",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/typography": "0.5.9",
     "@types/node": "18.16.18",
-    "@types/react": "18.2.13",
+    "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/parser": "5.60.0",
     "autoprefixer": "10.4.14",
