--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@code-hike/lighter": "^0.7.0",
+    "@code-hike/lighter": "0.7.1",
     "@markdoc/markdoc": "0.3.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-scroll-area": "1.0.4",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-tabs": "1.0.4",
